Fix alignment

--- a/style.css
+++ b/style.css
@@ -12,18 +12,22 @@
   
   #inner {
     width: 50vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
   }
 
   #left {
-    align-items:center;
+    /*align-items:center;
     display: flex;
-    justify-content: center;
+    justify-content: center;*/
     width: 35%;
   }
 
   #right {
-    display: flex;
-    flex-direction: column;
+    /*display: flex;
+    flex-direction: row;*/
     width: 65%;
   }
 
